--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="index.js"></script>
-    <title>Bubble Game</title>
-</head>
-<body style="background-color: rgb(15, 15, 15);">
+    <meta name="Bubble Game Next Gen" content="Ma version de Bubble">
 
-    <canvas style="margin-left: 30%;" id="viewport" width="628" height="628"></canvas></div>
-    </body>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="watch.png">
+
+    <title>Bubble Bubble</title>
+</head>
+
+<body>
+
+    <h1>Mon Bubble Bubble :</h1>
+
+    <canvas  id="viewport" width="628" height="628"></canvas>
+
+    <div class="social ">
+        <ul>
+          <li><a href="https://github.com/100sue" target="_blank"><i class="fab fa-github"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/roland-appert" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+          <li><a href="#" target="_blank"><i class="fab fa-behance"></i></a></li>
+        </ul>
+    </div>
+
+<script src="index.js"></script>
+</body>
+
 </html>
